// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPillarStatusBox renders the open third pillar flow when user has no pillar active 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Message>
        account.status.choice.pillar.third.missing.label
      </Message>,
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  showAction={false}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pillar.third.missing.action
    </Message>
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the success flow 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
    ]
  }
  name={
    <Message>
      account.status.choice.pillar.third
    </Message>
  }
  ok={true}
  showAction={true}
>
  <Link
    className="btn btn-light"
    to="/3rd-pillar-flow"
  >
    <Message>
      account.status.choice.pay.tuleva.3
    </Message>
  </Link>
</StatusBoxRow>
`;
